# hades-messaging

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  SECURITY.md  common-check.txt  deny.toml  readme.md  setup_secrets.sh
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  container-scan.yml  dependency-review.yml  nix-check.yml  release.yml  scorecard.yml  security-audit.yml  wallet-tests.yml
client/: .env.development  README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/components/: BurnTimer.css  BurnTimer.tsx  ChainBadge.tsx  CryptoIcon.tsx  CryptoTransferBubble.tsx  InChatSendSheet.tsx  MessageBubble.tsx  MessageStatus.css  MessageStatus.tsx  ReactionPicker.css  ReactionPicker.tsx  ReplyPreview.css  ReplyPreview.tsx  SecureRouteIndicator.css  SecureRouteIndicator.tsx  Toast.css  ToastContainer.tsx  TokenSelector.tsx  TorStatusBar.css  TorStatusBar.tsx  TypingIndicator.css  TypingIndicator.tsx  VoiceRecorder.css  VoiceRecorder.tsx
client/src/config/: constants.ts  env.ts  i18n.ts  routes.ts
client/src/design/: global.css  tokens.css
client/src/hooks/: useNetworkQuality.ts  useSecureRoute.ts  useVirtualMessages.ts
client/src/locales/de/: translation.json
client/src/locales/en/: translation.json
client/src/locales/es/: translation.json
client/src/locales/fr/: translation.json
client/src/screens/: ActionSheet.css  ActionSheet.tsx  AddContact.css  AddContact.tsx  AppLock.css  AppLock.tsx  CallHistory.css  CallHistory.tsx  CallScreen.tsx  ChatList.css  ChatList.tsx  Contacts.css  Contacts.tsx  Conversation.css  Conversation.tsx  IncomingCall.css  IncomingCall.tsx  Onboarding.css  Onboarding.tsx  OutgoingCall.css  OutgoingCall.tsx  ProfileSettings.css  ProfileSettings.tsx  RecoveryPhrase.css  RecoveryPhrase.tsx  Search.css  SecurityDetails.css  SecurityDetails.tsx  Settings.css  Settings.tsx  VideoCall.css  VideoCall.tsx  VoiceCall.css  VoiceCall.tsx  Wallet.css  Wallet.tsx  WalletHistory.tsx  WalletReceive.tsx  WalletSend.tsx
client/src/services/: webrtc.ts
client/src/store/: callStore.ts  connectionStore.ts  contactStore.ts  conversationStore.ts  deviceStore.ts  networkStore.ts  securityStore.ts  settingsStore.ts  toastStore.ts  walletStore.ts
client/src/types/: connection.ts  message.ts  wallet.ts
client/src/ui/: icons.ts
client/src/utils/: featureFlags.ts  haptics.ts  time.ts
crates/hades-common/: Cargo.toml
crates/hades-common/src/: constants.rs  error.rs  lib.rs  types.rs
crates/hades-crypto/: Cargo.toml
crates/hades-crypto/src/: aead.rs  anti_forensics.rs  audio.rs  calls.rs  double_ratchet.rs  entropy.rs  error.rs  fingerprint.rs  kdf.rs  lib.rs  notifications.rs  padding.rs  pqxdh.rs  screenshot_guard.rs  sealed_sender.rs  sealed_sender_v2.rs  search.rs  sender_keys.rs
crates/hades-identity/: Cargo.toml
crates/hades-identity/src/: anonymous_credentials.rs  error.rs  fingerprint.rs  identity.rs  key_bundle.rs  key_store.rs  lib.rs  multi_device.rs  recovery.rs  seed.rs
crates/hades-media/: Cargo.toml
crates/hades-media/src/: compress.rs  encrypt.rs  lib.rs  types.rs
crates/hades-onion/: Cargo.toml
crates/hades-onion/src/: arti_client.rs  bridge_rotation.rs  cell.rs  circuit.rs  commands.rs  cover_traffic.rs  guard.rs  lib.rs  onion_encrypt.rs  pluggable_transport.rs  relay_node.rs
crates/hades-proto/: Cargo.toml
crates/hades-proto/proto/: hades.proto
crates/hades-proto/src/: lib.rs  messages.rs
crates/hades-relay/: Cargo.toml
crates/hades-relay/src/: auth.rs  config.rs  lib.rs  message_queue.rs  prekey_store.rs  rate_limit.rs  router.rs  server.rs  session.rs
crates/hades-wallet/: Cargo.toml
crates/hades-wallet/src/: error.rs  hd.rs  lib.rs  price.rs  rpc.rs  rpc_cache.rs  transaction.rs
crates/hades-wallet/src/chains/: bitcoin.rs  ethereum.rs  mod.rs  solana.rs  types.rs
deployment/: Caddyfile  Dockerfile.relay  README.md  configuration.nix  deploy.sh
deployment/monitoring/: prometheus.yml
docs/: ARCHITECTURE.md  CRYPTOGRAPHY.md  INSTALLATION.md  THREAT_MODEL.md
src-tauri/: Cargo.toml  Entitlements.plist  ExportOptions.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.playstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  background_sync.rs  biometric.rs  burn_timer.rs  call_signaling.rs  commands.rs  contacts.rs  error.rs  lib.rs  main.rs  media.rs  message_queue.rs  notifications.rs  pipeline.rs  receipts.rs  search.rs  state.rs  typing.rs  wallet_commands.rs  websocket.rs
src-tauri/src/commands/: auth_commands.rs  contact_commands.rs  mod.rs
src-tauri/src/db/: attachments.rs  call.rs  contacts.rs  keys.rs  messages.rs  migrations.rs  mod.rs  pool.rs  reactions.rs  sessions.rs  wallet.rs
tests/e2e/: e2e_tests.rs
