[workspace]
resolver = "2"
members = [
    "crates/hades-common",
    "crates/hades-crypto",
    "crates/hades-identity",
    "crates/hades-proto",
    "crates/hades-relay",
    "crates/hades-onion",
    "crates/hades-wallet",
    "crates/hades-media",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hadesmessaging/hades"

[workspace.dependencies]
# Cryptographic primitives
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
ml-kem = "0.2"

# Security
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
rand = "0.8"
getrandom = "0.2"
argon2 = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-build = "0.13"

# Networking & server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rustls = "0.23"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"

# HD Wallet / Identity
bip32 = { version = "0.5", features = ["secp256k1"] }
bip39 = { version = "2", features = ["std", "rand"] }

# Utilities
ulid = { version = "1", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
thiserror = "2"
anyhow = "1"
dashmap = "6"
governor = "0.6"
bytes = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
