[package]
name = "hades-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for Hades Messaging — PQXDH, Double Ratchet, AEAD"

[dependencies]
hades-common = { path = "../hades-common" }

# Key exchange
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
ml-kem = { workspace = true }

# Encryption
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

# Security
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
