[package]
name = "hades-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Identity management and key bundling for Hades Messaging"

[dependencies]
hades-common = { path = "../hades-common" }
hades-crypto = { path = "../hades-crypto" }

ed25519-dalek = { workspace = true, features = ["serde"] }
x25519-dalek = { workspace = true, features = ["serde"] }
ml-kem = { workspace = true }

# HD key derivation
bip32 = { workspace = true }
bip39 = { workspace = true }
sha2 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
