[package]
name = "hades-onion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Onion routing layer for Hades Messaging — circuit building, encryption, relay nodes"

[dependencies]
hades-common = { path = "../hades-common" }
hades-crypto = { path = "../hades-crypto" }

# Crypto
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

# Async
tokio = { workspace = true }

# Security
zeroize = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
getrandom = { workspace = true }
