[package]
name = "hades-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol definitions and serialization for Hades Messaging"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
