[package]
name = "hades-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# BIP-32/39/44 HD wallet
bip32 = { version = "0.5", features = ["secp256k1"] }
bip39 = { version = "2", features = ["std", "rand"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }

# Ethereum / EVM
k256 = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2", features = ["keccak"] }
rlp = "0.6"

# Solana
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Common
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
bs58 = { version = "0.5", features = ["check"] }
base64 = "0.22"
log = "0.4"
